# mofa-studio

./: Cargo.toml  DISTRIBUTION.md  README.md  TODO.md  claude.md  fix-numpy.ps1  fix-pyarrow-conda.ps1  fix-pyarrow.ps1  list  mofa-studio-dora-integration-checklist.md
.github/: copilot-instructions.md
apps/mofa-debate/dataflow/: voice-chat.yml
apps/mofa-debate/src/: audio_player.rs
apps/mofa-fm/dataflow/: study_config_student1.toml  study_config_student2.toml  voice-chat.yml
apps/mofa-fm/src/: audio_player.rs  dora_integration.rs  screen.rs
apps/mofa-friend/: Cargo.toml
apps/mofa-friend/dataflow/: tts.yml
apps/mofa-friend/src/: audio_player.rs  lib.rs  (+6 more)
apps/mofa-primespeech/: Cargo.toml
apps/mofa-primespeech/dataflow/: tts.yml
apps/mofa-primespeech/scripts/: transcribe_audio.py
apps/mofa-primespeech/src/: audio_player.rs  dora_integration.rs  lib.rs  mofa_hero.rs  screen.rs  system_monitor.rs  voice_clone_modal.rs  voice_data.rs  voice_selector.rs
apps/mofa-tts/: Cargo.toml
docs/: mofa-primespeech-data-flow.md  mofa-primespeech-start-button-execution-path.md  primespeech-voice-cloning-research.md
models/setup-lcoal-models/: DEPENDENCIES.md  README.md  install_all_packages.sh  setup_isolated_env.sh
models/setup-local-models/: install_all_packages.ps1  setup_isolated_env.ps1
mofa-dora-bridge/src/: bridge.rs  controller.rs  data.rs  dispatcher.rs  lib.rs  parser.rs
mofa-studio-shell/: Cargo.toml
mofa-studio-shell/src/: app.rs
mofa-widgets/src/: app_trait.rs
node-hub/dora-common/: README.md
node-hub/dora-primespeech/: VoiceClone.md
(+18 files in other folders)
